texlive-bin (2015.20150524.37493-1) UNRELEASED; urgency=medium

  * Imported Upstream version 2015.20150524.37493
  * pin all of own libs to exact version
  * add git support in make-orig-tar
  * unfuzzify patches, disable relaz luazlib version check
  * re-include libpoppler in new sources, debian's version is too old
  * build libtexlua and libtexluajit libraries

 -- Norbert Preining <preining@debian.org>  Sun, 24 May 2015 16:59:57 +0900

texlive-bin (2014.20140926.35254-6) unstable; urgency=high

  * cherrypick security fix for libpng CVE-2015-0973 (Closes: #775673)
    Restored a test on width that was removed from png.c at libpng-1.6.9

 -- Norbert Preining <preining@debian.org>  Sun, 18 Jan 2015 23:45:42 +0900

texlive-bin (2014.20140926.35254-5) unstable; urgency=high

  * fix insecure temp file creation in mktexlsr (Closes: #775139)

 -- Norbert Preining <preining@debian.org>  Tue, 13 Jan 2015 07:32:13 +0900

texlive-bin (2014.20140926.35254-4) unstable; urgency=high

  * cherrypick security fix for libpng buffer overflow (Closes: #773824)
    (CVE-2014-9495)

 -- Norbert Preining <preining@debian.org>  Wed, 24 Dec 2014 09:18:29 +0900

texlive-bin (2014.20140926.35254-3) unstable; urgency=medium

  * cherrypick fixes from upstream svn:
    - fix enctex reading \^^ab control sequences
    - fix mpost reading fontmap file multiple times (Closes: #767967)
    - dvipdfmx fixes:
      . fix pk support
      . correct behaviour for subtractions in pkfont.c
      . fix crash when gqpn is unset
      . support for ghostscript 9.15
      . fix bug in spc_dvips_at_end_page (wrong logic)
  * bump standards version, no changes necessary

 -- Norbert Preining <preining@debian.org>  Thu, 06 Nov 2014 09:37:33 +0900

texlive-bin (2014.20140926.35254-2) unstable; urgency=medium

  * remove libxp build dep (Closes: #763304)
  * Fix arm64 build by correctly qulifying neon code (Closes: #763711)
    (Thanks to Wookey)
