@@ -5,9 +5,11 @@ texlive-bin (2015.20150524.37493-1) UNRELEASED; urgency=medium
   * add git support in make-orig-tar
   * unfuzzify patches, disable relaz luazlib version check
   * re-include libpoppler in new sources, debian's version is too old
+    use --without-system-poppler and --with-system-xpdf
+    as we need system xpdf/poppler for pdftex/xetex
   * build libtexlua and libtexluajit libraries
 
- -- Norbert Preining <preining@debian.org>  Sun, 24 May 2015 16:59:57 +0900
+ -- Norbert Preining <preining@debian.org>  Mon, 25 May 2015 09:09:23 +0900
 
 texlive-bin (2014.20140926.35254-6) unstable; urgency=high
 
